# TCP-server-Cplusplus

./: .clang-tidy  .clang-tidy-ignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: clang-tidy.yml
benchmarks/: decoder_benchmark.cpp  e2e_echo_benchmark.cpp
cmake/scripts/: check_benchmark_regression.py  run-clang-tidy.sh  run-decoder-fuzz.sh  run-performance-baselines.sh  run-sanitizer-tests.bat  run-sanitizer-tests.sh
docs/: INVARIANTS.md
docs/baselines/: regression-gates.json
fuzz/: decoder_fuzz.cpp
include/tcp_server/: config.hpp  config_loader.hpp  config_validator.hpp  logging.hpp  metrics.hpp
include/tcp_server/app/: dispatcher.hpp
include/tcp_server/core/: lifecycle.hpp
include/tcp_server/net/: accept.hpp  acceptor.hpp  connection.hpp  event_loop.hpp  idle_timeout_manager.hpp  listener.hpp  recv.hpp  select_poller.hpp  send.hpp  socket.hpp
include/tcp_server/protocol/: frame_decoder.hpp  frame_encoder.hpp
include/tcp_server/runtime/: worker_pool.hpp
src/app/: dispatcher.cpp
src/config/: config_loader.cpp  config_validator.cpp
src/core/: lifecycle.cpp
src/infra/: logging.cpp  metrics.cpp
src/net/: accept_ops.cpp  acceptor.cpp  connection.cpp  event_loop.cpp  idle_timeout_manager.cpp  recv.cpp  select_poller.cpp  send.cpp  socket.cpp
src/protocol/: frame_decoder.cpp  frame_encoder.cpp
src/runtime/: worker_pool.cpp
tests/integration/: echo_roundtrip_tests.cpp  graceful_shutdown_tests.cpp  server_startup_tests.cpp
tests/unit/: config_tests.cpp  dispatcher_tests.cpp  frame_decoder_tests.cpp  frame_encoder_tests.cpp  idle_timeout_manager_tests.cpp  lifecycle_tests.cpp  thread_safety_stress_tests.cpp  worker_pool_tests.cpp
